--- a/templates/workflows.html
+++ b/templates/workflows.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Operations Dashboard - {{ tenant.name }}{% endblock %}
+{% block title %}Workflows Dashboard - {{ tenant.name }}{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Operations Dashboard</h1>
+    <h1>Workflows Dashboard</h1>
     <p style="color: #666;">Monitor all media buys, tasks, and system activity for {{ tenant.name }}</p>
     
     <!-- Summary Cards -->
